--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,5 @@ apply from: "settings-flags.gradle"
 includeWithFlags "common_parser", "kotlin_common"
 includeWithFlags "common_nodes", "kotlin_common"
 includeWithFlags "js_parser", "kotlin_js"
+includeWithFlags "js_test", "kotlin_js"
 includeWithFlags "jvm_parser", "kotlin_jvm"
